<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.NewUserActivity"
    >

    <LinearLayout
        android:id="@+id/lyContentTitleNewUserActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@color/blue300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ivReturnListNewUserActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:padding="7dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_NewUserActivity"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:src="@drawable/agregar_usuario"
                app:shapeAppearanceOverlay="@style/Circular"
                />

            <TextView
                android:id="@+id/tvImageValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/image_NewUserActivity"
                android:textColor="#FD0303"
                android:layout_gravity="center"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/name_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieNameNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input del apellido-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilApNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/last_name_ap_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieApNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input del apellido-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/last_name_am_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAmNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input del correo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/email_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmailNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input del fecha nacimiento-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDateNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/date_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieDateNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_NewUserActivity"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <!--input del calle-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddresNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/addres_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAddresNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--input del numero-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumberNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/number_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieNumberNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input colonia-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilColoniaNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/colonia_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieColoniaNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input municipio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMunicipioNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/delegacion_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieMunicipioNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input estado-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEstadoNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/Estado_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEstadoNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--input cp-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCpNewUserActivity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/Cp_NewUserActivity"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieCpNewUserActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="100dp"
                android:layout_gravity="center"
                android:text="@string/btnSave_NewUserActivity"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/blue300"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>